--- a/two_tier/pvc-mysql.yaml
+++ b/two_tier/pvc-mysql.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: pvc-mysql
-  name: koyeli
+  namespace: koyeli
 spec:
   accessModes:
     - ReadWriteOnce
